<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Score: 20"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/question_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.52"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.92">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="Question: 11"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="12"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <ScrollView
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/question_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </ScrollView>

        <ImageView
            android:layout_width="360dp"
            android:layout_height="165dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="210dp" />
    </RelativeLayout>

    <RadioButton
        android:id="@+id/answer_A"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/answer_container"
        android:text="@string/answer_1_A"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintWidth_percent="0.44"
        android:onClick="chooseAnswer"/>

    <RadioButton
        android:id="@+id/answer_B"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/answer_container"
        android:text="@string/answer_1_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintWidth_percent="0.44"
        android:onClick="chooseAnswer"/>

    <RadioButton
        android:id="@+id/answer_C"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/answer_container"
        android:text="@string/answer_1_C"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_A"
        app:layout_constraintWidth_percent="0.44"
        android:onClick="chooseAnswer"/>

    <RadioButton
        android:id="@+id/answer_D"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/answer_container"
        android:text="@string/answer_1_D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintTop_toBottomOf="@+id/answer_B"
        app:layout_constraintWidth_percent="0.44"
        android:onClick="chooseAnswer"/>

    <Button
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.92"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.095"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Next"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_D" />
</androidx.constraintlayout.widget.ConstraintLayout>

